--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,56 @@
 {
-    "name": "Rohan Kadukar Portfolio",
-    "short_name": "Rohan",
+    "name": "Rohan Kadukar - Full Stack Developer Portfolio",
+    "short_name": "Rohan Portfolio",
+    "description": "Full Stack Developer specializing in React, Next.js, and Node.js. View my projects and technical expertise.",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#1e40af",
     "orientation": "portrait",
     "scope": "/",
+    "categories": ["portfolio", "web development", "technology"],
+    "dir": "ltr",
+    "lang": "en-US",
+    "prefer_related_applications": false,
     "icons": [
       {
         "src": "/icons/icon-192x192.png",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       },
       {
         "src": "/icons/icon-512x512.png",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       },
       {
         "src": "/icons/icon-1024x1024.png",
         "sizes": "1024x1024",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
+      }
+    ],
+    "shortcuts": [
+      {
+        "name": "View Projects",
+        "url": "/#projects",
+        "description": "View my portfolio projects"
+      },
+      {
+        "name": "Contact Me",
+        "url": "/#contact",
+        "description": "Get in touch with me"
+      }
+    ],
+    "screenshots": [
+      {
+        "src": "/screenshots/home.png",
+        "sizes": "1280x720",
+        "type": "image/png",
+        "platform": "wide",
+        "label": "Homepage of Rohan Kadukar's Portfolio"
       }
     ]
   }
