--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "critters": "^0.0.23",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.15.0",
